<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UILabs</string>
    <string name="done_string">Done:</string>
    <string name="priority_string">Priority:</string>
    <string name="date_string">Date:</string>
    <string name="add_new_todo_item_string">Add New ToDo Item</string>
    <string name="title_string">Title</string>
    <string name="status_string">Status</string>
    <string name="not_done_string">Not Done</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="enter_title_string">Enter Title</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_barra_lateral">barraLateral</string>
    <string name="title_activity_navegacion">activityNavegacion</string>
    <string name="title_activity_nav">activityNav</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_md_list">Items</string>
    <string name="title_md_detail">md Detail</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="pais">
    <item>España</item>
    <item>Francia</item>
    <item>Alemania</item>
    <item>Portugal</item>
</string-array>


    <string-array name="codigopais">
        <item>ESP</item>
        <item>FRA</item>
        <item>GER</item>
        <item>POR</item>
    </string-array>
</resources>
