<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>


    <!-- Time and Date -->

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_time_string"
        android:layout_above="@+id/cancelButton"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_time_set_string"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/date" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date_string"
        android:layout_above="@+id/cancelButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_date_set_string"
        android:layout_above="@+id/date_picker_button"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/Descripcion"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="Introduce aqui su mensaje"
        android:inputType="textShortMessage"
        android:layout_below="@+id/DescripcionLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_height="60dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage"
        android:layout_below="@+id/TitleLabel"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/DescripcionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descripción"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true">
    </TextView>

    <RadioGroup
        android:id="@+id/temaGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/time_and_date"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/Deporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deporte" />

        <RadioButton
            android:id="@+id/Cultura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Cultura" />

        <RadioButton
            android:id="@+id/Festejo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Festejo" />
        <RadioButton
            android:id="@+id/Otros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Otros" />
    </RadioGroup>

    <TextView
        android:id="@+id/tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tema: "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/temaGroup"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

</RelativeLayout>
